--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 .container {
-	margin: auto;
-	width: 50%;
-	border: 1px solid #336fb4;
-	background-color: #156fac;
+	margin: 10px auto;
+	width: 60%;
+	border: 2px solid #000000;
+	background-color: #283C55;
 	padding: 10px;
+	border-radius: 20px;
 }
 
 .add-btn {
@@ -17,3 +18,13 @@
 	display: inline-block;
 	vertical-align: middle;
   }
+
+.header {
+	text-align: center;
+	color: #F8CC11;
+
+	text-shadow:
+		3px 0px 7px rgba(36, 30, 11, 0.8), 
+		-3px 0px 7px rgba(36, 30, 11, 0.8), 
+	  	0px 4px 7px rgba(36, 30, 11, 0.8);
+}
